# libwebp

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .gitmodules  Justfile  analysis_optionns.yaml  analysis_options.yaml  ffigen.yaml  melos.yaml  pubspec.yaml  toolkit.nu
example/: pubspec.yaml
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: webp_test.dart
example/windows/flutter/: generated_plugins.cmake
lib/: libwebp.dart  libwebp_generated_bindings.dart
lib/src/: anim_encoder.dart  finalizers.dart  image.dart  libwebp.dart  libwebp_generated_bindings.dart  utils.dart
libwebp_flutter_libs/: README.md
libwebp_flutter_libs/android/: build.gradle  settings.gradle
libwebp_flutter_libs/android/src/main/: AndroidManifest.xml
libwebp_flutter_libs/ios/: libwebp_flutter_libs.podspec
libwebp_flutter_libs/linux/: CMakeLists.txt
libwebp_flutter_libs/macos/: libwebp_flutter_libs.podspec
libwebp_flutter_libs/macos/Classes/: libwebp_flutter_libs.c
libwebp_flutter_libs/src/: CMakeLists.txt  libwebp_flutter_libs.c
libwebp_flutter_libs/windows/: CMakeLists.txt
test/: libwebp_test.dart  utils_test.dart
